# tslearn

./: .codeclimate.yml  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  conftest.py  pyproject.toml  requirements-test.txt  requirements.txt  requirements_build.txt  requirements_nocast.txt  requirements_rtd.txt  requirements_tests.txt  setup.cfg  setup.py  sonar-project.properties
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  💡feature-request.md  🛠️-bug-report.md
.github/workflows/: build_wheels.yml  sonarqube.yaml  test_UCR_UEA_datasets.yml  test_against_nightly_deps  test_against_nightly_deps.yaml
docs/: backend.rst  citing.rst  conf.py  contributing.rst  dependencies.rst  gettingstarted.rst  index.rst  installation.rst  integration_other_software.rst  make.bat  quickstart.rst  reference.rst  requirements_rtd.txt  utils.py  variablelength.rst
docs/_ext/: rst_templates.py
docs/_static/: custom.css
docs/_templates/: class.rst  function.rst  module.rst  navbar.html
docs/gen_modules/: tslearn.backend.rst  tslearn.clustering.rst  tslearn.datasets.rst  tslearn.early_classification.rst  tslearn.forecasting.rst  tslearn.generators.rst  tslearn.matrix_profile.rst  tslearn.metrics.performance.rst  tslearn.metrics.rst  tslearn.neighbors.rst  tslearn.neural_network.rst  tslearn.piecewise.rst  tslearn.preprocessing.rst  tslearn.shapelets.rst  tslearn.svm.rst  tslearn.utils.rst
docs/user_guide/: clustering.rst  dtw.rst  early.rst  kernel.rst  lcss.rst  matrix-profile.rst  shapelets.rst  userguide.rst
notebooks/: save_load_kshape.ipynb
tests/: conftest.py  sklearn_patches.py  test_backend.py  test_barycenters.py  test_clustering.py  test_datasets.py  test_early_classification.py  test_estimators.py  test_forecasting.py  test_matrixprofile.py  test_metrics.py  test_metrics_perf.py  test_neighbors.py  test_piecewise.py  test_preprocessing.py  test_serialize_models.py  test_shapelets.py  test_svm.py  test_synchronizer.py  test_utils.py  test_variablelength.py
tslearn/: __init__.py  adaptation.py  barycenters.py  bases.py  clustering.py  compile.py  cycc.c  cycc.pyx  cydtw.c  cydtw.pyx  cygak.c  cygak.pyx  cylrdtw.c  cylrdtw.pyx  cysax.c  cysax.pyx  datasets.py  deprecated.py  early_classification.py  example_tslearn.py  experiment_multiple_backends.py  failed_test_kshape.py  generators.py  gp.py  hdftools.py  matrix_profile.py  metrics.py  neighbors.py  neural_network.py  nn.py  nonmyop.py  nonmyopic.py  piecewise.py  preprocessing.py  shapelets.py  soft_dtw_fast.c  soft_dtw_fast.pyx  svm.py  test_estimators.py  testing_utils.py  (+4 more)
tslearn/.cached_datasets/: Trace.npz  singleTrainTest.csv
tslearn/backend/: __init__.py  autograd_backend.py  backend.py  base_backend.py  jax_backend.py  numpy_backend.py  pytorch_backend.py
tslearn/barycenters/: __init__.py  dba.py  euclidean.py  softdtw.py  utils.py
tslearn/bases/: __init__.py  bases.py
tslearn/clustering/: __init__.py  dbscan.py  kmeans.py  kshape.py  kvisibility.py  utils.py
tslearn/datasets/: __init__.py  cached.py  datasets.py  ucr_uea.py
tslearn/docs/: Makefile  adaptation.rst  barycenters.rst  citing.rst  clustering.rst  conf.py  contributing.rst  dtw.rst  environment.yml  generators.rst  gettingstarted.rst  index.rst  installation.rst  integration_other_software.rst  make.bat  matrix-profile.rst  metrics.rst  modules.rst  neighbors.rst  piecewise.rst  preprocessing.rst  quickstart.rst  reference.rst  requirements_rtd.txt  shapelets.rst  toc_quickstart.rst  tslearn.rst  userguide.rst  utils.rst  variablelength.rst
tslearn/early_classification/: __init__.py  early_classification.py
tslearn/examples/: README.md  ex_metrics.ipynb  ex_neighbors.ipynb
(+455 files in other folders)
